[package]
name = "async-std"
version = "0.1.0"
authors = ["cashew <42924021+cashev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.1", features = ["attributes"] }
