[package]
name = "app"
version = "0.1.0"
authors = ["cashew <42924021+cashev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = {path = "../library", default-features = false, features = ["serde", "special"]}
